# ini-reader

./: CMakeLists.txt
sample/: FILE.INI  sample.c
src/: ini.c  ini.h
